@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.427 2005/10/20 02:06:32 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.428 2005/10/21 01:50:00 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  20 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility.py, src/GLIArchitectureTemplate.py:
+  horrible tangled mess of code that is tarball unpacking subprogress display
 
   19 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
